# widibeoApp

./: .gitignore  azure_setup.md  pyproject.toml  requirements.txt
backend/: airbyte_service.py  alembic.ini  app.py  oauth_test.html
backend/airbyte_service/: base.py  base_functions.py
backend/alembic/: env.py
backend/alembic/versions/: 350b4bae54e9_initial_generation_of_tables.py  6bf9966ff7de_adding_connection_to_streams.py  9161497c0530_new_overall_design.py  9530bdd30f15_small_fix_to_stream.py  9e429fa1781a_initial_migration.py  b1c498e50400_initial_tables.py  fe85ceb96fff_new_schema.py
backend/db/: crud.py  database.py  models.py  schemas.py
backend/routers/: airbyte.py  llm.py
backend/stats_copilot/: llm.py  schemas.py  types.py
backend/templates/: chat.html  oauth.html
