[tool.poetry]
name = "widibeoapp"
version = "0.1.0"
description = ""
authors = ["Guilherme Diaz-Berrio"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
airbyte-api = "^0.29.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
